# fastcall

./: .gitignore  CMakeLists.txt  package.json
lib/: FunctionDefinition.js  RefTypeParser.js
lib/ref-libs/: ref.js  wchar.js
src/: CMakeLists.txt  callbackimpl.cpp  dyncallbackwrapper.cpp  dyncallwrapper.cpp  dynloadwrapper.cpp  getv8value.h  helpers.cpp  int64.cpp  mutex.cpp  statics.cpp  weak.cpp
